More configuration adjustments
Signed-off-by: Michael Edgar <medgar@redhat.com>