@@ -8,6 +8,7 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
+import org.apache.kafka.common.config.TopicConfig;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -210,7 +211,10 @@ class TopicCommandTest extends ClikMainTestBase implements TestRecordProducer {
         "'2025-01-01T00:00:00Z'   , '0,1'        , 0,  0,  0", // 0 & 1 are 1970-01-01T00:00:00Z and 1970-01-01T00:00:00.001Z
     })
     void testDescribeTopicWithOffsets(String offsets1, String offsets2, String expected1, String expected2, String expected3) throws Exception {
-        topicService.createTopic(admin(), "describe-offsets", 10, 1, Collections.emptyMap());
+        topicService.createTopic(admin(), "describe-offsets", 10, 1, Map.of(
+                TopicConfig.FLUSH_MESSAGES_INTERVAL_CONFIG, "1",
+                TopicConfig.INDEX_INTERVAL_BYTES_CONFIG, "128"
+        ));
         var baseTime = Instant.now().minus(Duration.ofDays(101));
 
         produceMessagesWithTimestamps("describe-offsets", 100,
